--- a/src/view/main/main.less
+++ b/src/view/main/main.less
@@ -41,7 +41,7 @@
     padding: 18px;
     height: 100%;
     overflow: auto;
-
+    padding-bottom: 140px;
   }
   .left-sider{
     .ivu-layout-sider-children{
